--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": "^8.0",
         "illuminate/support": "~9.0"
     },
     "autoload": {
